fixing firefox footer alignment

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -71,7 +71,8 @@ h3.colored {
 
 
 #footer-list {
-	-webkit-padding-start: 2px;
+	-webkit-padding-start: 0px;
+	-moz-padding-start: 0px;
 }
 
 #footer-list li
